--- a/src/styles/Styles.css
+++ b/src/styles/Styles.css
@@ -993,3 +993,65 @@ button:hover {
     font-size: 0.9rem;
   }
 }
+
+/* Estilos para las tablas */
+
+.grid-container {
+  display: grid;
+  gap: 80px;
+  width: 100%;
+  margin-top: 50px;
+  justify-content: center;
+}
+
+.grid-item {
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+@media (min-width: 992px) {
+  .grid-container {
+    grid-template-columns: repeat(12, 1fr);
+    .grid-item {
+      grid-column: span 12;
+    }
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .grid-container {
+    grid-template-columns: repeat(12, 1fr);
+  }
+  .grid-item {
+    grid-column: span 12;
+  }
+}
+
+@media (max-width: 767px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+  }
+  .grid-item {
+    grid-column: span 1;
+  }
+}
+
+.table-title {
+  font-size: 1.2rem;
+  color: black;
+  margin-bottom: 1rem;
+  margin-top: 1.5rem;
+  text-align: center;
+  font-weight: bold;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1.5rem;
+}
